<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".AddRepresentativeActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_add"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/representative_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rep_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/representative_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_main_area"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/rg_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/north"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/north"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"/>

            <RadioButton
                android:id="@+id/south"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:text="@string/south"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"/>

            <RadioButton
                android:id="@+id/east"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/east"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"/>

            <RadioButton
                android:id="@+id/west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/west"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"/>

            <RadioButton
                android:id="@+id/lebanon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/lebanon"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"/>

        </RadioGroup>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_bg"
            android:textColor="@android:color/white"/>




        
        
        
    </LinearLayout>
    
   
        

    

</ScrollView>