<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/activity_bg"
    tools:context=".AddSalesReportActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"/>

            <Spinner
                android:id="@+id/month_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:layout_marginTop="8dp"
                android:entries="@array/months"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_title"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"/>

            <EditText
                android:id="@+id/year"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:backgroundTint="@android:color/white"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:hintTextColor="@android:color/white"
            android:hint="@string/north_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/north"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:hintTextColor="@android:color/white"
            android:hint="@string/south_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/south"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@android:color/white"
            android:layout_margin="16dp"
            android:hint="@string/east_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/east"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:hintTextColor="@android:color/white"
            android:hint="@string/west_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/west"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:hintTextColor="@android:color/white"
            android:hint="@string/lebanon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lebanon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_bg"
            android:textColor="@android:color/white"/>


    </LinearLayout>





</androidx.core.widget.NestedScrollView>